--- a/.github/workflows/auto-close-pr.yaml
+++ b/.github/workflows/auto-close-pr.yaml
@@ -1,20 +1,31 @@
-name: Auto Close PR After 2 Minutes
+name: List Open PRs
 
 on:
-  pull_request:
-    types: [opened]  # Trigger immediately upon PR creation
+  schedule:
+    - cron: "*/2 * * * *"  # Runs every 2 minutes
 
 jobs:
-  auto-close-pr:
+  list-open-prs:
     runs-on: ubuntu-latest
     steps:
-      - name: Wait for 2 minutes
-        run: sleep 120  # Wait for 2 minutes (120 seconds)
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Close the PR
-        if: github.event.action == 'opened'
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gh
+
+      - name: Authenticate with GitHub CLI
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pr_number=${{ github.event.pull_request.number }}
-          gh pr close $pr_number -c "Auto-closing PR after 2 minutes of creation."
+          echo "${GITHUB_TOKEN}" | gh auth login --with-token
+
+      - name: List Open PRs with Creation Date
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Listing all open PRs and their creation dates:"
+          gh pr list --state open --json number,title,createdAt \
+            --jq '.[] | "\(.number): \(.title) - Created at: \(.createdAt)"'
