--- a/.github/workflows/auto-close-pr.yaml
+++ b/.github/workflows/auto-close-pr.yaml
@@ -1,11 +1,11 @@
-name: List Open PRs
+name: List and Close Old PRs
 
 on:
   schedule:
     - cron: "* * * * *"  # Runs every minute
 
 jobs:
-  list-open-prs:
+  list-and-close-prs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -30,3 +30,18 @@ jobs:
           echo "Listing all open PRs and their creation dates:"
           gh pr list --state open --json number,title,createdAt \
             --jq '.[] | "\(.number): \(.title) - Created at: \(.createdAt)"'
+          
+      - name: Close PRs older than 30 minutes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Closing PRs older than 30 minutes:"
+          current_time=$(date +%s)
+          threshold_time=$((current_time - 1800))  # 30 minutes in seconds
+
+          # Get open PRs with their creation times
+          gh pr list --state open --json number,createdAt \
+            --jq '.[] | select(.createdAt | fromdate < '"$threshold_time"') | .number' | while read -r pr_number; do
+              echo "Closing PR #$pr_number"
+              gh pr close "$pr_number" --delete-branch --comment "Closed automatically after being open for more than 30 minutes."
+          done
